--- a/Scroll Runner/Packages/manifest.json
+++ b/Scroll Runner/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.6.0",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.31",
